--- a/packages/unified-server/landing/styles/landing.css
+++ b/packages/unified-server/landing/styles/landing.css
@@ -329,6 +329,7 @@ main {
       max-width: 1280px;
       position: relative;
       z-index: 1;
+      animation: fadeIn 2s cubic-bezier(0.4, 0, 0.3, 1) 0.4s 1 backwards;
     }
 
     & #img {
@@ -346,8 +347,15 @@ main {
         right: 0;
         bottom: 18px;
         border-radius: 32px;
-        background: url(/styles/landing/images/graph.png) right bottom / contain
-          no-repeat;
+
+        & #landing-img {
+          background-size: contain;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+        }
       }
     }
   }
@@ -472,12 +480,6 @@ footer {
   }
 }
 
-@media (min-resolution: 2dppx) {
-  main header #img #img-contents {
-    background-image: url(/styles/landing/images/graph@2x.png);
-  }
-}
-
 @media (min-width: 575px) {
   main header h1 {
     padding: var(--bb-grid-size-10) 0;
@@ -570,6 +572,11 @@ footer {
         border-radius: 24px;
         background: var(--n-0);
         aspect-ratio: 16/9;
+
+        & iframe {
+          width: 100%;
+          height: 100%;
+        }
       }
     }
   }
@@ -651,5 +658,15 @@ footer {
     & section {
       padding: var(--bb-grid-size-9) 0;
     }
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
