--- a/packages/unified-server/landing/styles/landing.css
+++ b/packages/unified-server/landing/styles/landing.css
@@ -335,10 +335,20 @@ main {
     & #img {
       width: calc(100svw - var(--bb-grid-size-16));
       margin: 0 auto;
-      border: 1px solid #d4daff;
-      border-radius: 32px;
       aspect-ratio: 7/5;
       position: relative;
+
+      &::after {
+        content: "";
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border: 1px solid #d4daff;
+        border-radius: 32px;
+        animation: fadeIn 1.3s cubic-bezier(0.4, 0, 0.3, 1) 0.7s 1 backwards;
+      }
 
       & #img-contents {
         width: 151%;
