--- a/packages/unified-server/landing/styles/landing.css
+++ b/packages/unified-server/landing/styles/landing.css
@@ -329,15 +329,26 @@ main {
       max-width: 1280px;
       position: relative;
       z-index: 1;
+      animation: fadeIn 2s cubic-bezier(0.4, 0, 0.3, 1) 0.4s 1 backwards;
     }
 
     & #img {
       width: calc(100svw - var(--bb-grid-size-16));
       margin: 0 auto;
-      border: 1px solid #d4daff;
-      border-radius: 32px;
       aspect-ratio: 7/5;
       position: relative;
+
+      &::after {
+        content: "";
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border: 1px solid #d4daff;
+        border-radius: 32px;
+        animation: fadeIn 1.3s cubic-bezier(0.4, 0, 0.3, 1) 0.7s 1 backwards;
+      }
 
       & #img-contents {
         width: 151%;
@@ -346,8 +357,15 @@ main {
         right: 0;
         bottom: 18px;
         border-radius: 32px;
-        background: url(/styles/landing/images/graph.png) right bottom / contain
-          no-repeat;
+
+        & #landing-img {
+          background-size: contain;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+        }
       }
     }
   }
@@ -472,12 +490,6 @@ footer {
   }
 }
 
-@media (min-resolution: 2dppx) {
-  main header #img #img-contents {
-    background-image: url(/styles/landing/images/graph@2x.png);
-  }
-}
-
 @media (min-width: 575px) {
   main header h1 {
     padding: var(--bb-grid-size-10) 0;
@@ -570,6 +582,11 @@ footer {
         border-radius: 24px;
         background: var(--n-0);
         aspect-ratio: 16/9;
+
+        & iframe {
+          width: 100%;
+          height: 100%;
+        }
       }
     }
   }
@@ -651,5 +668,15 @@ footer {
     & section {
       padding: var(--bb-grid-size-9) 0;
     }
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
