--- a/packages/visual-editor/public/styles/global.css
+++ b/packages/visual-editor/public/styles/global.css
@@ -820,6 +820,7 @@ body.hide-cursor {
     0px 4px 8px 3px rgba(0, 0, 0, 0.05), 0px 1px 3px 0 rgba(0, 0, 0, 0.1);
   --bb-elevation-1:
     0px 1px 2px rgb(0, 0, 0, 0.3), 0px 1px 3px rgb(0, 0, 0, 0.15);
+  --bb-elevation-0: 0px 0 20px rgb(0, 0, 0, 0.1);
 }
 
 :root.dark-theme {
